Adjust line points to DDA only to pixel size brushes

By adjusting to pixel level we loose subpixel precision
and lines appear jagged/curved

BUG:419368